# expriment

./: .gitattributes  .gitignore  CHANGELOG.md  EnglishSongLearningPlayer.spec  README.md  prompting.txt  pyproject.toml  run-first-release.cmd
Doc1/: prompt.md
alembic/: env.py
alembic/versions/: ce909b3a0f14_initial_schema.py
doc/: decision-log.md  high-level-design.md  traceability.md  verification-log.md
doc/verification/: netease-gate-2026-07-17.md
scripts/: build-first-release.ps1  smoke-packaged-app.ps1
src/english_player/: __init__.py  __main__.py
src/english_player/ai/: __init__.py  client.py  credentials.py
tests/: conftest.py  test_package.py
tests/ai/: test_chat_client.py
tests/diagnostics/: test_logging.py  test_redaction.py
tests/lyrics/: test_lrc.py  test_timeline.py
tests/migrations/: test_migrations.py
tests/persistence/: conftest.py  test_mapping.py  test_models.py  test_paths.py  test_transactions.py
tests/player/: test_coordinator.py  test_local_media.py  test_qt_engine.py  test_queue.py
tests/tasks/: test_cancellation.py  test_concurrency.py  test_models.py  test_registry.py  test_retry.py  test_user_errors.py
tests/tools/: test_netease_gate.py
tests/ui/: test_main_window.py
tools/: __init__.py
tools/feasibility/: __init__.py  netease_gate.py
拆分/tasks/: ai-learning.md  application-integration.md  background-tasks-diagnostics.md  external-services.md  lyrics.md  navigation-pages.md  packaging-release.md  persistence-migrations.md  phrase-favorites.md  player.md  playlist-library.md  progress.md  user-data.md
需求/: requirements.md
(+38 files in other folders)
